# mrimgx_file_layout

./: .gitignore  LICENSE  README.md
docs/: README.md
src/: CMakeLists.txt  IMG_TO_RAW.md  README.md
src/img_to_raw/: CMakeLists.txt  img_to_raw.cpp
src/libs/encryption/: CMakeLists.txt  framework.h
src/libs/file_operations/: CMakeLists.txt  file_operations.cpp
src/libs/file_reader/: CMakeLists.txt  backup_set.cpp  backup_set.h  enums.h  file_reader.cpp  file_structs.h  metadata_block_reader.cpp  metadataheader.h
src/libs/restore/: CMakeLists.txt  framework.h  restore.cpp
